NetBSD Problem Report #43507

From www@NetBSD.org  Thu Jun 24 20:52:03 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1532F63BA54
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 24 Jun 2010 20:52:03 +0000 (UTC)
Message-Id: <20100624205202.D73BB63BA50@www.NetBSD.org>
Date: Thu, 24 Jun 2010 20:52:02 +0000 (UTC)
From: demelier.david@gmail.com
Reply-To: demelier.david@gmail.com
To: gnats-bugs@NetBSD.org
Subject: no msk(4) on HP Probook 4510s
X-Send-Pr-Version: www-1.0

>Number:         43507
>Category:       kern
>Synopsis:       no msk(4) on HP Probook 4510s
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    jdolecek
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jun 24 20:55:00 +0000 2010
>Closed-Date:    Mon Jun 11 18:17:00 +0000 2018
>Last-Modified:  Mon Jun 11 18:17:00 +0000 2018
>Originator:     David DEMELIER
>Release:        -current
>Organization:
>Environment:
NetBSD Melon.malikania.fr 5.99.31 NetBSD 5.99.31 (Melon) #1: Thu Jun 24 22:45:22 CEST 2010  root@Melon.malikania.fr:/usr/obj/sys/arch/amd64/compile/Melon amd64
>Description:
There is Marvell ethernet card in my laptop (HP Probook 4510s) that is not recognized by msk(4)

# pcictl pci6 list
134:00:0: Marvell product 0x436c (ethernet network, revision 0x10)
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Jaromir Dolecek" <jdolecek@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43507 CVS commit: src/sys/dev/pci
Date: Sat, 9 Jun 2018 18:53:16 +0000

 Module Name:	src
 Committed By:	jdolecek
 Date:		Sat Jun  9 18:53:16 UTC 2018

 Modified Files:
 	src/sys/dev/pci: if_msk.c if_skreg.h

 Log Message:
 port basic match support for several more Yukon variants from OpenBSD, together
 with some basic conditionals I've found in that driver; only compile-tested, so
 very likely needs further work to actually work

 adresses also PR kern/43507


 To generate a diff of this commit:
 cvs rdiff -u -r1.55 -r1.56 src/sys/dev/pci/if_msk.c
 cvs rdiff -u -r1.15 -r1.16 src/sys/dev/pci/if_skreg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: jdolecek@NetBSD.org
State-Changed-When: Sat, 09 Jun 2018 19:01:07 +0000
State-Changed-Why:
I've modified the msk(4) driver to match your device. Since it's quite a long
time since this was filled, I understand you might not be in position to tst
this any more. Can you by chance still confirm if the device works
with -current?


Responsible-Changed-From-To: kern-bug-people->jdolecek
Responsible-Changed-By: jdolecek@NetBSD.org
Responsible-Changed-When: Sat, 09 Jun 2018 19:01:44 +0000
Responsible-Changed-Why:
I've committed the match change, so keep on me so I won't forget to eventually
close this.


From: David Demelier <demelier.david@gmail.com>
To: gnats-bugs@NetBSD.org, jdolecek@NetBSD.org, kern-bug-people@netbsd.org, 
	netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Cc: 
Subject: Re: kern/43507 (no msk(4) on HP Probook 4510s)
Date: Mon, 11 Jun 2018 09:44:57 +0200

 On Sat, 2018-06-09 at 19:01 +0000, jdolecek@NetBSD.org wrote:
 > Synopsis: no msk(4) on HP Probook 4510s
 > 
 > Responsible-Changed-From-To: kern-bug-people->jdolecek
 > Responsible-Changed-By: jdolecek@NetBSD.org
 > Responsible-Changed-When: Sat, 09 Jun 2018 19:01:44 +0000
 > Responsible-Changed-Why:
 > I've committed the match change, so keep on me so I won't forget to
 > eventually
 > close this.

 No unfortunately I don't have this laptop running NetBSD anymore.

 -- 
 David

State-Changed-From-To: feedback->closed
State-Changed-By: jdolecek@NetBSD.org
State-Changed-When: Mon, 11 Jun 2018 18:17:00 +0000
State-Changed-Why:
Submitter doesn't have the hw any more.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.