port basic match support for several more Yukon variants from OpenBSD, together with some basic conditionals I've found in that driver; only compile-tested, so very likely needs further work to actually work

adresses also PR kern/43507