sys/dev/pci/if_skreg.h
@@ -1,4 +1,4 @@
-/* $NetBSD: if_skreg.h,v 1.15 2014/10/10 14:23:06 christos Exp $ */
+/* $NetBSD: if_skreg.h,v 1.16 2018/06/09 18:53:16 jdolecek Exp $ */
 
 /*-
  * Copyright (c) 2003 The NetBSD Foundation, Inc.
@@ -388,9 +388,15 @@
 #define SK_YUKON_LP		0xB2
 #define SK_YUKON_XL		0xB3
 #define SK_YUKON_EC_U		0xB4
+#define SK_YUKON_EX		0xB5
 #define SK_YUKON_EC		0xB6
 #define SK_YUKON_FE		0xB7
 #define SK_YUKON_FE_P		0xB8
+#define SK_YUKON_SUPR		0xB9
+#define SK_YUKON_ULTRA2		0xBA
+#define SK_YUKON_OPTIMA		0xBC
+#define SK_YUKON_PRM		0xBD
+#define SK_YUKON_OPTIMA2	0xBE
 #define SK_YUKON_FAMILY(x) ((x) & 0xB0)
 
 #define SK_IS_GENESIS(sc) \
@@ -417,9 +423,22 @@
 #define SK_YUKON_EC_U_REV_A0	0x1
 #define SK_YUKON_EC_U_REV_A1	0x2
 #define SK_YUKON_EC_U_REV_B0	0x3
+#define SK_YUKON_EC_U_REV_B1	0x5
 
 #define SK_YUKON_FE_REV_A1	0x1
 #define SK_YUKON_FE_REV_A2	0x3
+
+#define SK_YUKON_FE_P_REV_A0	0x0
+
+#define SK_YUKON_EX_REV_A0	0x1
+#define SK_YUKON_EX_REV_B0	0x2
+
+#define SK_YUKON_SUPR_REV_A0	0x0
+#define SK_YUKON_SUPR_REV_B0	0x1
+#define SK_YUKON_SUPR_REV_B1	0x3
+
+#define SK_YUKON_PRM_REV_Z1	0x1
+#define SK_YUKON_PRM_REV_A0	0x2
 
 /* Workaround */
 #define SK_WA_43_418	0x01
@@ -1323,6 +1342,9 @@
 #define SK_PAT_CTR6		0x0f3e	/* Pattern Counter 6 */
 #define SK_PAT_CTR7		0x0f3f	/* Pattern Counter 7 */
 
+#define SK_GMAC_BYP_MACSECRX	0x00002000	/* Bypass macsec for Rx */
+#define SK_GMAC_BYP_MACSECTX	0x00000800	/* Bypass macsec for Tx */
+#define SK_GMAC_BYP_RETR_FIFO	0x00000200	/* Bypass retransmit FIFO */
 #define SK_GMAC_LOOP_ON		0x00000020	/* Loopback mode for testing */
 #define SK_GMAC_LOOP_OFF	0x00000010	/* purposes */
 #define SK_GMAC_PAUSE_ON	0x00000008	/* enable forward of pause */
